fix(grid): edit row buttons overlap

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -410,9 +410,9 @@
         .k-textbox {
             margin-top: -$input-padding-y;
             margin-bottom: -$input-padding-y;
-            width: 100%;
         }
     }
+    .k-grid-edit-row,
     .k-edit-cell {
         .k-widget,
         .k-textbox {
